Fix render issues on Firefox Change clear date icon by "Clear" string

--- a/src/styles/components/chat-view/_chat-participant.scss
+++ b/src/styles/components/chat-view/_chat-participant.scss
@@ -25,7 +25,6 @@
         font-size: .75em;
         color: #08c65b;
         padding: calc(var(--base-pm) / 2) var(--base-pm);
-        border-radius: 2px;
         transition: transform .3s var(--easeOutExpo);
     }
 }
