--- a/src/styles/layout/_app.scss
+++ b/src/styles/layout/_app.scss
@@ -19,6 +19,11 @@
     background-color: var(--wbrand-colour-light) !important;
     color: #f1f1f1 !important;
     border: 0 !important;
+    transition: background-color .4s;
+
+    &:hover {
+        background-color: lighten(#09d261, 5%) !important;
+    }
 }
 
 .wr-home-panel {
